Added swagger jsdoc for get methods and post method of boards
