# lib/router/router.js
@@ -50,7 +50,9 @@ router.get('/api/todo/:todoBoardId', getTodoBoardId)
  *
  * /api/boards:
  *   get:
- *     description: Get a list of current boards
+ *     tags:
+ *      - Boards
+ *     summary: Get a list of current boards
  *     produces:
  *       - application/json
  *     responses:
@@ -64,7 +66,9 @@ router.get('/api/boards', listBoards)
  *
  * /api/boards/{id}:
  *   get:
- *    description: Login to the application
+ *    tags:
+ *      - Boards
+ *    summary: Returns the board requested by id
  *    parameters:
 *       - in: path
 *         name: id
@@ -72,14 +76,57 @@ router.get('/api/boards', listBoards)
 *         type: string
 *         format: uuid
 *         description: The ID of the requested board
+*         example: "573357c2-dfcb-493c-a0aa-3c05ef199943"
  *    produces:
  *       - application/json
  *    responses:
  *      200:
  *        description: Board Found
+ *      404:
+ *        description: Board Not Found
  */
 router.get('/api/boards/:boardID', getBoardByID)
 
+/**
+ * @swagger
+ *
+ * /api/boards:
+ *  post:
+ *    tags:
+ *      - Boards
+ *    summary: Creates a new board.
+ *    consumes:
+ *      - application/json
+ *    parameters:
+ *      - in: body
+ *        name: board info
+ *        required: true
+ *        description: The info required to create a board.
+ *        schema:
+ *          type: object
+ *          required:
+ *            - name
+ *            - members
+ *            - done
+ *          properties:
+ *            name:
+ *              type: string
+ *              example: Board 1
+ *            members:
+ *              type: array
+ *              items:
+ *                type: string
+ *              example: [ "John", "Elizabeth" ]
+ *            done:
+ *              type: boolean
+ *              example: false
+ *    produces:
+ *      - application/json
+ *    responses:
+ *      201:
+ *        description: Created
+
+ */
 router.post('/api/boards', addBoard)
 router.put('/api/boards/:boardID', updateBoard)
 router.delete('/api/boards/:boardID', removeBoard)
